feat: work on the apis
